# alphadev

./: .gitignore  .gitmodules  acting.py  agents.py  alphadev-acme.py  alphadev.py  alphadev_actions.py  config.py  distribution.py  dual_value_az.py  loggers.py  mcts_distributed.py  observers.py  pyproject.toml  requirements.txt  search.py
alphadev/: acting.py  agents.py  alphadev-acme.py  alphadev.py  alphadev_acme.py  config.py  device_config.py  distribution.py  dual_value_az.py  environment.py  evaluation.py  inference_service.py  learning.py  loggers.py  network.py  observers.py  search.py  search_v2.py  service.py  shared_memory.py  tf_util.py  utils.py  variable_service.py
alphadev/search/: apv_mcts.py  base.py  mcts.py  shared_tree.py  tree.py
alphadev/service/: inference_service.py  process_entry.py  service.py  variable_service.py
alphadev/shared_memory/: base.py  buffer.py  tree.py
config/: config.yaml
test/: apv_mcts_config.yaml  env_perf_test.py  env_test.py  service_test.py  streamline_profiling.yaml  test_apv_mcts.py  test_mcts.py  test_network.py
